[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Card.gd" type="Script" id=1]
[ext_resource path="res://Assets/arcanas-sheet.png" type="Texture" id=2]
[ext_resource path="res://Systems/RandomVariationPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/cardPlace1.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/cardPlace2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/cardPlace3.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/cardPlace4.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/GravityBold-12.tres" type="DynamicFont" id=8]

[sub_resource type="Animation" id=1]
resource_name = "celebrate"
length = 1.5
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Front:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0, -20.0, 0.0, 20.0, 0.0, -20.0, 0.0, 20.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Front:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Front:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Back:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Front:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Front:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Back:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -48.0
margin_top = -64.0
margin_right = 48.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
vframes = 5
hframes = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 23
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/celebrate = SubResource( 1 )
anims/close = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="DebugLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenSFX" parent="." instance=ExtResource( 3 )]
bus = "Sound"
samples = [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
